feat: add headline

--- a/apps/curriculum-vitae/src/index.html
+++ b/apps/curriculum-vitae/src/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>CurriculumVitae</title>
+    <meta name="author" content="Cédric Moulard">
+    <meta name="description" content="CV de Cédric Moulard, 20 ans d'expérience dans l'informatique. Couteau suisse, capable d'intervenir sur de manière transverse sur tous les aspects technique d'un projet.">
+    <title>VP of Engineering | Cédric Moulard</title>
     <base href="/" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto"
